Refactor DZIEN 3 notebooks, add SparkSQL notebook, cleanup emojis, add Jobs v2

--- a/DZIEN_2_Lakehouse_Delta_Lake/workshops/01_ingestion_pipeline_workshop.ipynb
+++ b/DZIEN_2_Lakehouse_Delta_Lake/workshops/01_ingestion_pipeline_workshop.ipynb
@@ -41,7 +41,7 @@
    "id": "a0635808",
    "metadata": {},
    "source": [
-    "## 🎯 Część 1: COPY INTO - Batch Ingestion\n",
+    "## Część 1: COPY INTO - Batch Ingestion\n",
     "\n",
     "### Zadanie 1.1: Ingestion plików CSV\n",
     "\n",
@@ -60,16 +60,16 @@
    "source": [
     "# TODO: Utwórz tabelę docelową\n",
     "spark.sql(f\"\"\"\n",
-    "    CREATE TABLE IF NOT EXISTS {CATALOG}.{SCHEMA}.bronze_customers_batch (\n",
-    "        customer_id INT,\n",
-    "        name STRING,\n",
-    "        email STRING,\n",
-    "        city STRING,\n",
-    "        country STRING,\n",
-    "        _ingestion_timestamp TIMESTAMP\n",
-    "    )\n",
-    "    USING DELTA\n",
-    "    LOCATION '{____}/customers_batch'  -- Uzupełnij BRONZE_PATH\n",
+    " CREATE TABLE IF NOT EXISTS {CATALOG}.{SCHEMA}.bronze_customers_batch (\n",
+    " customer_id INT,\n",
+    " name STRING,\n",
+    " email STRING,\n",
+    " city STRING,\n",
+    " country STRING,\n",
+    " _ingestion_timestamp TIMESTAMP\n",
+    " )\n",
+    " USING DELTA\n",
+    " LOCATION '{____}/customers_batch' -- Uzupełnij BRONZE_PATH\n",
     "\"\"\")"
    ]
   },
@@ -82,25 +82,25 @@
    "source": [
     "# TODO: COPY INTO z pliku CSV\n",
     "spark.sql(f\"\"\"\n",
-    "    ____ INTO {CATALOG}.{SCHEMA}.bronze_customers_batch\n",
-    "    FROM (\n",
-    "        SELECT \n",
-    "            customer_id,\n",
-    "            name,\n",
-    "            email,\n",
-    "            city,\n",
-    "            country,\n",
-    "            current_timestamp() as _ingestion_timestamp\n",
-    "        FROM '{____}/____'  -- Uzupełnij SOURCE_DATA_PATH i nazwę pliku\n",
-    "    )\n",
-    "    FILEFORMAT = ____  -- Uzupełnij format (CSV)\n",
-    "    FORMAT_OPTIONS (\n",
-    "        'header' = '____',  -- Czy plik ma nagłówek?\n",
-    "        'inferSchema' = '____'  -- Czy inferować schemat?\n",
-    "    )\n",
-    "    COPY_OPTIONS (\n",
-    "        'mergeSchema' = '____'  -- Czy mergować schemat?\n",
-    "    )\n",
+    " ____ INTO {CATALOG}.{SCHEMA}.bronze_customers_batch\n",
+    " FROM (\n",
+    " SELECT \n",
+    " customer_id,\n",
+    " name,\n",
+    " email,\n",
+    " city,\n",
+    " country,\n",
+    " current_timestamp() as _ingestion_timestamp\n",
+    " FROM '{____}/____' -- Uzupełnij SOURCE_DATA_PATH i nazwę pliku\n",
+    " )\n",
+    " FILEFORMAT = ____ -- Uzupełnij format (CSV)\n",
+    " FORMAT_OPTIONS (\n",
+    " 'header' = '____', -- Czy plik ma nagłówek?\n",
+    " 'inferSchema' = '____' -- Czy inferować schemat?\n",
+    " )\n",
+    " COPY_OPTIONS (\n",
+    " 'mergeSchema' = '____' -- Czy mergować schemat?\n",
+    " )\n",
     "\"\"\")"
    ]
   },
@@ -113,8 +113,8 @@
    "source": [
     "# Weryfikacja\n",
     "spark.sql(f\"\"\"\n",
-    "    SELECT COUNT(*) as total_records \n",
-    "    FROM {CATALOG}.{SCHEMA}.bronze_customers_batch\n",
+    " SELECT COUNT(*) as total_records \n",
+    " FROM {CATALOG}.{SCHEMA}.bronze_customers_batch\n",
     "\"\"\").show()"
    ]
   },
@@ -140,16 +140,16 @@
    "source": [
     "# TODO: Utwórz tabelę dla zamówień\n",
     "spark.sql(f\"\"\"\n",
-    "    CREATE TABLE IF NOT EXISTS {CATALOG}.{SCHEMA}.bronze_orders_batch (\n",
-    "        order_id INT,\n",
-    "        customer_id INT,\n",
-    "        order_date DATE,\n",
-    "        total_amount DOUBLE,\n",
-    "        status STRING,\n",
-    "        _ingestion_timestamp TIMESTAMP\n",
-    "    )\n",
-    "    USING ____  -- Uzupełnij format (DELTA)\n",
-    "    LOCATION '{____}/orders_batch'  -- Uzupełnij ścieżkę\n",
+    " CREATE TABLE IF NOT EXISTS {CATALOG}.{SCHEMA}.bronze_orders_batch (\n",
+    " order_id INT,\n",
+    " customer_id INT,\n",
+    " order_date DATE,\n",
+    " total_amount DOUBLE,\n",
+    " status STRING,\n",
+    " _ingestion_timestamp TIMESTAMP\n",
+    " )\n",
+    " USING ____ -- Uzupełnij format (DELTA)\n",
+    " LOCATION '{____}/orders_batch' -- Uzupełnij ścieżkę\n",
     "\"\"\")"
    ]
   },
@@ -162,18 +162,18 @@
    "source": [
     "# TODO: COPY INTO z pliku JSON\n",
     "spark.sql(f\"\"\"\n",
-    "    COPY INTO {CATALOG}.{SCHEMA}.bronze_orders_batch\n",
-    "    FROM (\n",
-    "        SELECT \n",
-    "            order_id,\n",
-    "            customer_id,\n",
-    "            TO_DATE(order_date) as order_date,\n",
-    "            total_amount,\n",
-    "            status,\n",
-    "            current_timestamp() as _ingestion_timestamp\n",
-    "        FROM '{____}/____'  -- Uzupełnij ścieżkę do JSON\n",
-    "    )\n",
-    "    FILEFORMAT = ____  -- Uzupełnij format\n",
+    " COPY INTO {CATALOG}.{SCHEMA}.bronze_orders_batch\n",
+    " FROM (\n",
+    " SELECT \n",
+    " order_id,\n",
+    " customer_id,\n",
+    " TO_DATE(order_date) as order_date,\n",
+    " total_amount,\n",
+    " status,\n",
+    " current_timestamp() as _ingestion_timestamp\n",
+    " FROM '{____}/____' -- Uzupełnij ścieżkę do JSON\n",
+    " )\n",
+    " FILEFORMAT = ____ -- Uzupełnij format\n",
     "\"\"\")"
    ]
   },
@@ -186,7 +186,7 @@
    "source": [
     "# Weryfikacja\n",
     "spark.sql(f\"\"\"\n",
-    "    SELECT * FROM {CATALOG}.{SCHEMA}.bronze_orders_batch LIMIT 10\n",
+    " SELECT * FROM {CATALOG}.{SCHEMA}.bronze_orders_batch LIMIT 10\n",
     "\"\"\").show()"
    ]
   },
@@ -212,17 +212,17 @@
    "source": [
     "# TODO: Utwórz tabelę dla produktów\n",
     "spark.sql(f\"\"\"\n",
-    "    CREATE TABLE IF NOT EXISTS {CATALOG}.{SCHEMA}.bronze_products_batch (\n",
-    "        product_id INT,\n",
-    "        product_name STRING,\n",
-    "        category STRING,\n",
-    "        price DOUBLE,\n",
-    "        stock_quantity INT,\n",
-    "        _source_file STRING,\n",
-    "        _ingestion_timestamp TIMESTAMP\n",
-    "    )\n",
-    "    USING DELTA\n",
-    "    LOCATION '{____}/products_batch'\n",
+    " CREATE TABLE IF NOT EXISTS {CATALOG}.{SCHEMA}.bronze_products_batch (\n",
+    " product_id INT,\n",
+    " product_name STRING,\n",
+    " category STRING,\n",
+    " price DOUBLE,\n",
+    " stock_quantity INT,\n",
+    " _source_file STRING,\n",
+    " _ingestion_timestamp TIMESTAMP\n",
+    " )\n",
+    " USING DELTA\n",
+    " LOCATION '{____}/products_batch'\n",
     "\"\"\")"
    ]
   },
@@ -235,19 +235,19 @@
    "source": [
     "# TODO: COPY INTO z pliku Parquet\n",
     "spark.sql(f\"\"\"\n",
-    "    COPY INTO {CATALOG}.{SCHEMA}.bronze_products_batch\n",
-    "    FROM (\n",
-    "        SELECT \n",
-    "            product_id,\n",
-    "            product_name,\n",
-    "            category,\n",
-    "            price,\n",
-    "            stock_quantity,\n",
-    "            ____ as _source_file,  -- Użyj _metadata.file_path\n",
-    "            current_timestamp() as _ingestion_timestamp\n",
-    "        FROM '{____}/____'  -- Uzupełnij ścieżkę do Parquet\n",
-    "    )\n",
-    "    FILEFORMAT = ____\n",
+    " COPY INTO {CATALOG}.{SCHEMA}.bronze_products_batch\n",
+    " FROM (\n",
+    " SELECT \n",
+    " product_id,\n",
+    " product_name,\n",
+    " category,\n",
+    " price,\n",
+    " stock_quantity,\n",
+    " ____ as _source_file, -- Użyj _metadata.file_path\n",
+    " current_timestamp() as _ingestion_timestamp\n",
+    " FROM '{____}/____' -- Uzupełnij ścieżkę do Parquet\n",
+    " )\n",
+    " FILEFORMAT = ____\n",
     "\"\"\")"
    ]
   },
@@ -260,9 +260,9 @@
    "source": [
     "# Weryfikacja\n",
     "spark.sql(f\"\"\"\n",
-    "    SELECT product_id, product_name, category, _source_file \n",
-    "    FROM {CATALOG}.{SCHEMA}.bronze_products_batch \n",
-    "    LIMIT 10\n",
+    " SELECT product_id, product_name, category, _source_file \n",
+    " FROM {CATALOG}.{SCHEMA}.bronze_products_batch \n",
+    " LIMIT 10\n",
     "\"\"\").show(truncate=False)"
    ]
   },
@@ -288,8 +288,8 @@
    "source": [
     "# Sprawdź liczbę rekordów przed ponownym COPY INTO\n",
     "before_count = spark.sql(f\"\"\"\n",
-    "    SELECT COUNT(*) as count \n",
-    "    FROM {CATALOG}.{SCHEMA}.bronze_customers_batch\n",
+    " SELECT COUNT(*) as count \n",
+    " FROM {CATALOG}.{SCHEMA}.bronze_customers_batch\n",
     "\"\"\").collect()[0][\"count\"]\n",
     "\n",
     "print(f\"Liczba rekordów przed ponownym COPY INTO: {before_count}\")"
@@ -304,19 +304,19 @@
    "source": [
     "# TODO: Ponowne wykonanie COPY INTO\n",
     "spark.sql(f\"\"\"\n",
-    "    COPY INTO {CATALOG}.{SCHEMA}.bronze_customers_batch\n",
-    "    FROM (\n",
-    "        SELECT \n",
-    "            customer_id,\n",
-    "            name,\n",
-    "            email,\n",
-    "            city,\n",
-    "            country,\n",
-    "            current_timestamp() as _ingestion_timestamp\n",
-    "        FROM '{SOURCE_DATA_PATH}/customers.csv'\n",
-    "    )\n",
-    "    FILEFORMAT = CSV\n",
-    "    FORMAT_OPTIONS ('header' = 'true', 'inferSchema' = 'true')\n",
+    " COPY INTO {CATALOG}.{SCHEMA}.bronze_customers_batch\n",
+    " FROM (\n",
+    " SELECT \n",
+    " customer_id,\n",
+    " name,\n",
+    " email,\n",
+    " city,\n",
+    " country,\n",
+    " current_timestamp() as _ingestion_timestamp\n",
+    " FROM '{SOURCE_DATA_PATH}/customers.csv'\n",
+    " )\n",
+    " FILEFORMAT = CSV\n",
+    " FORMAT_OPTIONS ('header' = 'true', 'inferSchema' = 'true')\n",
     "\"\"\")"
    ]
   },
@@ -329,8 +329,8 @@
    "source": [
     "# Weryfikacja idempotentności\n",
     "after_count = spark.sql(f\"\"\"\n",
-    "    SELECT COUNT(*) as count \n",
-    "    FROM {CATALOG}.{SCHEMA}.bronze_customers_batch\n",
+    " SELECT COUNT(*) as count \n",
+    " FROM {CATALOG}.{SCHEMA}.bronze_customers_batch\n",
     "\"\"\").collect()[0][\"count\"]\n",
     "\n",
     "print(f\"Liczba rekordów po ponownym COPY INTO: {after_count}\")\n",
@@ -344,7 +344,7 @@
    "source": [
     "---\n",
     "\n",
-    "## 🔄 Część 2: Auto Loader - Streaming Ingestion\n",
+    "## Część 2: Auto Loader - Streaming Ingestion\n",
     "\n",
     "### Zadanie 2.1: Konfiguracja Auto Loader dla CSV\n",
     "\n",
@@ -364,12 +364,12 @@
    "source": [
     "# TODO: Streaming read z Auto Loader\n",
     "customers_stream = (\n",
-    "    spark.readStream\n",
-    "    .format(\"____\")  # Uzupełnij format (cloudFiles)\n",
-    "    .option(\"cloudFiles.format\", \"____\")  # Format plików źródłowych (csv)\n",
-    "    .option(\"cloudFiles.schemaLocation\", f\"{CHECKPOINT_PATH}/____\")  # Checkpoint dla schematu\n",
-    "    .option(\"header\", \"true\")\n",
-    "    .load(f\"{SOURCE_DATA_PATH}/customers.csv\")\n",
+    " spark.readStream\n",
+    " .format(\"____\") # Uzupełnij format (cloudFiles)\n",
+    " .option(\"cloudFiles.format\", \"____\") # Format plików źródłowych (csv)\n",
+    " .option(\"cloudFiles.schemaLocation\", f\"{CHECKPOINT_PATH}/____\") # Checkpoint dla schematu\n",
+    " .option(\"header\", \"true\")\n",
+    " .load(f\"{SOURCE_DATA_PATH}/customers.csv\")\n",
     ")"
    ]
   },
@@ -384,9 +384,9 @@
     "from pyspark.sql.functions import current_timestamp, input_file_name\n",
     "\n",
     "customers_enriched = (\n",
-    "    customers_stream\n",
-    "    .withColumn(\"_ingestion_timestamp\", ____)  # Dodaj timestamp\n",
-    "    .withColumn(\"_source_file\", ____)  # Dodaj nazwę pliku źródłowego\n",
+    " customers_stream\n",
+    " .withColumn(\"_ingestion_timestamp\", ____) # Dodaj timestamp\n",
+    " .withColumn(\"_source_file\", ____) # Dodaj nazwę pliku źródłowego\n",
     ")"
    ]
   },
@@ -399,12 +399,12 @@
    "source": [
     "# TODO: Zapisz stream do tabeli Delta\n",
     "query_customers = (\n",
-    "    customers_enriched.writeStream\n",
-    "    .format(\"____\")  # Uzupełnij format\n",
-    "    .outputMode(\"____\")  # Tryb zapisu (append)\n",
-    "    .option(\"checkpointLocation\", f\"{____}/customers_stream\")  # Checkpoint\n",
-    "    .option(\"mergeSchema\", \"____\")  # Schema evolution\n",
-    "    .table(f\"{CATALOG}.{SCHEMA}.bronze_customers_stream\")\n",
+    " customers_enriched.writeStream\n",
+    " .format(\"____\") # Uzupełnij format\n",
+    " .outputMode(\"____\") # Tryb zapisu (append)\n",
+    " .option(\"checkpointLocation\", f\"{____}/customers_stream\") # Checkpoint\n",
+    " .option(\"mergeSchema\", \"____\") # Schema evolution\n",
+    " .table(f\"{CATALOG}.{SCHEMA}.bronze_customers_stream\")\n",
     ")"
    ]
   },
@@ -417,11 +417,11 @@
    "source": [
     "# Weryfikacja streamu\n",
     "import time\n",
-    "time.sleep(10)  # Poczekaj na przetworzenie\n",
+    "time.sleep(10) # Poczekaj na przetworzenie\n",
     "\n",
     "spark.sql(f\"\"\"\n",
-    "    SELECT COUNT(*) as total_records \n",
-    "    FROM {CATALOG}.{SCHEMA}.bronze_customers_stream\n",
+    " SELECT COUNT(*) as total_records \n",
+    " FROM {CATALOG}.{SCHEMA}.bronze_customers_stream\n",
     "\"\"\").show()"
    ]
   },
@@ -447,13 +447,13 @@
    "source": [
     "# TODO: Auto Loader z schema hints\n",
     "orders_stream = (\n",
-    "    spark.readStream\n",
-    "    .format(\"cloudFiles\")\n",
-    "    .option(\"cloudFiles.format\", \"____\")  # Format JSON\n",
-    "    .option(\"cloudFiles.schemaLocation\", f\"{CHECKPOINT_PATH}/orders_schema\")\n",
-    "    .option(\"cloudFiles.schemaHints\", \"____\")  # Podpowiedź: \"order_date DATE, total_amount DOUBLE\"\n",
-    "    .option(\"cloudFiles.rescuedDataColumn\", \"____\")  # Kolumna dla rescue data\n",
-    "    .load(f\"{____}/orders_batch.json\")  # Uzupełnij ścieżkę\n",
+    " spark.readStream\n",
+    " .format(\"cloudFiles\")\n",
+    " .option(\"cloudFiles.format\", \"____\") # Format JSON\n",
+    " .option(\"cloudFiles.schemaLocation\", f\"{CHECKPOINT_PATH}/orders_schema\")\n",
+    " .option(\"cloudFiles.schemaHints\", \"____\") # Podpowiedź: \"order_date DATE, total_amount DOUBLE\"\n",
+    " .option(\"cloudFiles.rescuedDataColumn\", \"____\") # Kolumna dla rescue data\n",
+    " .load(f\"{____}/orders_batch.json\") # Uzupełnij ścieżkę\n",
     ")"
    ]
   },
@@ -466,11 +466,11 @@
    "source": [
     "# TODO: Zapisz stream\n",
     "query_orders = (\n",
-    "    orders_stream.writeStream\n",
-    "    .format(\"delta\")\n",
-    "    .outputMode(\"____\")  # Tryb append\n",
-    "    .option(\"checkpointLocation\", f\"{CHECKPOINT_PATH}/____\")  # Checkpoint\n",
-    "    .table(f\"{CATALOG}.{SCHEMA}.bronze_orders_stream\")\n",
+    " orders_stream.writeStream\n",
+    " .format(\"delta\")\n",
+    " .outputMode(\"____\") # Tryb append\n",
+    " .option(\"checkpointLocation\", f\"{CHECKPOINT_PATH}/____\") # Checkpoint\n",
+    " .table(f\"{CATALOG}.{SCHEMA}.bronze_orders_stream\")\n",
     ")"
    ]
   },
@@ -484,7 +484,7 @@
     "# Weryfikacja\n",
     "time.sleep(10)\n",
     "spark.sql(f\"\"\"\n",
-    "    SELECT * FROM {CATALOG}.{SCHEMA}.bronze_orders_stream LIMIT 10\n",
+    " SELECT * FROM {CATALOG}.{SCHEMA}.bronze_orders_stream LIMIT 10\n",
     "\"\"\").show()"
    ]
   },
@@ -509,13 +509,13 @@
    "outputs": [],
    "source": [
     "# TODO: Wyświetl aktywne streamy\n",
-    "active_streams = spark.streams.____  # Uzupełnij metodę (active)\n",
+    "active_streams = spark.streams.____ # Uzupełnij metodę (active)\n",
     "\n",
     "print(f\"Liczba aktywnych streamów: {len(active_streams)}\")\n",
     "for stream in active_streams:\n",
-    "    print(f\"\\nStream ID: {stream.id}\")\n",
-    "    print(f\"Name: {stream.name}\")\n",
-    "    print(f\"Status: {stream.status}\")"
+    " print(f\"\\nStream ID: {stream.id}\")\n",
+    " print(f\"Name: {stream.name}\")\n",
+    " print(f\"Status: {stream.status}\")"
    ]
   },
   {
@@ -527,12 +527,12 @@
    "source": [
     "# TODO: Sprawdź ostatni progress\n",
     "if len(active_streams) > 0:\n",
-    "    last_progress = active_streams[0].____  # Uzupełnij metodę (lastProgress)\n",
-    "    \n",
-    "    if last_progress:\n",
-    "        print(f\"Batch ID: {last_progress['batchId']}\")\n",
-    "        print(f\"Przetworzone rekordy: {last_progress['numInputRows']}\")\n",
-    "        print(f\"Czas przetwarzania: {last_progress['batchDuration']} ms\")"
+    " last_progress = active_streams[0].____ # Uzupełnij metodę (lastProgress)\n",
+    " \n",
+    " if last_progress:\n",
+    " print(f\"Batch ID: {last_progress['batchId']}\")\n",
+    " print(f\"Przetworzone rekordy: {last_progress['numInputRows']}\")\n",
+    " print(f\"Czas przetwarzania: {last_progress['batchDuration']} ms\")"
    ]
   },
   {
@@ -556,8 +556,8 @@
    "source": [
     "# TODO: Zatrzymaj wszystkie streamy\n",
     "for stream in spark.streams.active:\n",
-    "    print(f\"Zatrzymuję stream: {stream.name}\")\n",
-    "    stream.____()  # Uzupełnij metodę (stop)\n",
+    " print(f\"Zatrzymuję stream: {stream.name}\")\n",
+    " stream.____() # Uzupełnij metodę (stop)\n",
     "\n",
     "print(\"\\nWszystkie streamy zatrzymane!\")"
    ]
@@ -599,13 +599,13 @@
    "source": [
     "# Porównanie liczby rekordów\n",
     "copy_into_count = spark.sql(f\"\"\"\n",
-    "    SELECT 'COPY INTO' as method, COUNT(*) as records \n",
-    "    FROM {CATALOG}.{SCHEMA}.bronze_customers_batch\n",
+    " SELECT 'COPY INTO' as method, COUNT(*) as records \n",
+    " FROM {CATALOG}.{SCHEMA}.bronze_customers_batch\n",
     "\"\"\")\n",
     "\n",
     "auto_loader_count = spark.sql(f\"\"\"\n",
-    "    SELECT 'Auto Loader' as method, COUNT(*) as records \n",
-    "    FROM {CATALOG}.{SCHEMA}.bronze_customers_stream\n",
+    " SELECT 'Auto Loader' as method, COUNT(*) as records \n",
+    " FROM {CATALOG}.{SCHEMA}.bronze_customers_stream\n",
     "\"\"\")\n",
     "\n",
     "copy_into_count.union(auto_loader_count).show()"
@@ -620,7 +620,7 @@
    "source": [
     "# TODO: Historia operacji COPY INTO\n",
     "spark.sql(f\"\"\"\n",
-    "    ____ HISTORY {CATALOG}.{SCHEMA}.bronze_customers_batch\n",
+    " ____ HISTORY {CATALOG}.{SCHEMA}.bronze_customers_batch\n",
     "\"\"\").select(\"version\", \"operation\", \"operationMetrics\").show(truncate=False)"
    ]
   },
@@ -633,7 +633,7 @@
    "source": [
     "# TODO: Historia operacji Auto Loader\n",
     "spark.sql(f\"\"\"\n",
-    "    DESCRIBE HISTORY {CATALOG}.{SCHEMA}.bronze_customers_stream\n",
+    " DESCRIBE HISTORY {CATALOG}.{SCHEMA}.bronze_customers_stream\n",
     "\"\"\").select(\"version\", \"operation\", \"operationMetrics\").show(truncate=False)"
    ]
   },
@@ -644,13 +644,13 @@
    "source": [
     "---\n",
     "\n",
-    "## ✅ Podsumowanie warsztatu\n",
+    "## Podsumowanie warsztatu\n",
     "\n",
     "**Zrealizowane cele:**\n",
-    "- ✅ Implementacja batch ingestion z COPY INTO\n",
-    "- ✅ Konfiguracja Auto Loader dla streaming ingestion\n",
-    "- ✅ Obsługa różnych formatów (CSV, JSON, Parquet)\n",
-    "- ✅ Monitoring i zarządzanie pipeline'ami\n",
+    "- Implementacja batch ingestion z COPY INTO\n",
+    "- Konfiguracja Auto Loader dla streaming ingestion\n",
+    "- Obsługa różnych formatów (CSV, JSON, Parquet)\n",
+    "- Monitoring i zarządzanie pipeline'ami\n",
     "\n",
     "**Kiedy użyć COPY INTO:**\n",
     "- Batch processing z określonym harmonogramem\n",
