--- a/DZIEN_3_Transformation_Governance_Integrations/01a_advanced_pyspark_transformations.ipynb
+++ b/DZIEN_3_Transformation_Governance_Integrations/01a_advanced_pyspark_transformations.ipynb
@@ -18,22 +18,31 @@
    "source": [
     "# Zaawansowane Transformacje PySpark\n",
     "\n",
-    "**Temat:** Advanced PySpark Transformations  \n",
-    "**Czas trwania:** 40 minut  \n",
-    "**Typ:** Live coding demo + teoria\n",
+    "**Cel szkoleniowy:** Opanowanie zaawansowanych technik transformacji danych w PySpark: Window Functions, struktury złożone, JSON processing i funkcje datowe.\n",
     "\n",
-    "---\n",
-    "\n",
-    "## Cele szkoleniowe\n",
-    "\n",
+    "**Zakres tematyczny:**\n",
     "- Window Functions: partitionBy, orderBy, rowsBetween, rangeBetween\n",
     "- Funkcje okienkowe: lag, lead, row_number, dense_rank, rank\n",
     "- Rolling windows i agregacje ruchome\n",
     "- Struktury złożone: explode, posexplode, sequence\n",
     "- JSON processing: from_json, to_json, schema_of_json\n",
-    "- Funkcje datowe: date_trunc, date_add, add_months, last_day\n",
+    "- Funkcje datowe: date_trunc, date_add, add_months, last_day"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Kontekst i wymagania\n",
     "\n",
-    "---"
+    "- **Dzień szkolenia**: Dzień 3 - Transformation, Governance & Integrations\n",
+    "- **Typ notebooka**: Demo (Live coding)\n",
+    "- **Czas trwania**: ~40 minut\n",
+    "- **Wymagania techniczne**:\n",
+    "  - Databricks Runtime 14.3 LTS lub nowszy\n",
+    "  - Unity Catalog włączony\n",
+    "  - Uprawnienia: CREATE TABLE, SELECT\n",
+    "  - Klaster: Standard z minimum 2 workers"
    ]
   },
   {
@@ -594,7 +603,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "orders_products_df.display()"
+    "orders_products_df = spark.createDataFrame(orders_with_products_data, orders_products_schema)"
    ]
   },
   {
@@ -603,7 +612,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "orders_products_df = spark.createDataFrame(orders_with_products_data, orders_products_schema)"
+    "display(orders_products_df.limit(5))"
    ]
   },
   {
@@ -773,8 +782,7 @@
     "basket_df = spark.createDataFrame(basket_data, basket_schema) \\\n",
     "    .withColumn(\"order_date\", to_date(col(\"order_date\")))\n",
     "\n",
-    "print(\"Dane oryginalne - zamówienia z zagnieżdżonymi produktami:\")\n",
-    "basket_df.display()"
+    "display(basket_df.limit(5))"
    ]
   },
   {
@@ -868,9 +876,10 @@
     "orders_before = basket_df.count()\n",
     "items_after = basket_exploded.count()\n",
     "\n",
-    "print(f\"Statystyki:\")\n",
-    "print(f\"   Zamówień (przed explode): {orders_before}\")\n",
-    "print(f\"   Pozycji produktów (po explode): {items_after}\")"
+    "display(spark.createDataFrame([\n",
+    "    (\"Zamówień (przed explode)\", orders_before),\n",
+    "    (\"Pozycji produktów (po explode)\", items_after)\n",
+    "], [\"Metryka\", \"Wartość\"]))"
    ]
   },
   {
@@ -1255,7 +1264,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "date_sequence.display()"
+    "# Generuj sekwencję dni\n",
+    "date_sequence = date_ranges_df.withColumn(\n",
+    "    \"date_array\",\n",
+    "    expr(\"sequence(start_date, end_date, interval 1 day)\")\n",
+    ")"
    ]
   },
   {
@@ -1264,11 +1277,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Generuj sekwencję dni\n",
-    "date_sequence = date_ranges_df.withColumn(\n",
-    "    \"date_array\",\n",
-    "    expr(\"sequence(start_date, end_date, interval 1 day)\")\n",
-    ")"
+    "display(date_sequence)"
    ]
   },
   {
