--- a/DZIEN_3_Transformation_Governance_Integrations/03_lakeflow_jobs_orchestration.ipynb
+++ b/DZIEN_3_Transformation_Governance_Integrations/03_lakeflow_jobs_orchestration.ipynb
@@ -53,14 +53,14 @@
     "- **Alerting**: email, webhooks, integrations\n",
     "- **Cost optimization**: Serverless, spot instances, autoscaling\n",
     "\n",
-    "### 🆕 Serverless Jobs (zalecane od 2024)\n",
+    "### Serverless Jobs (zalecane od 2024)\n",
     "\n",
     "**Serverless compute dla Jobs** eliminuje potrzebę konfiguracji klastrów:\n",
-    "- ✅ Near-zero startup time\n",
-    "- ✅ Automatic optimization przez Databricks\n",
-    "- ✅ Pay-per-use billing\n",
-    "- ✅ Autoscaling i Photon włączone domyślnie\n",
-    "- ✅ Performance Mode (od April 2025) - wybór między wydajnością a kosztami\n",
+    "- Near-zero startup time\n",
+    "- Automatic optimization przez Databricks\n",
+    "- Pay-per-use billing\n",
+    "- Autoscaling i Photon włączone domyślnie\n",
+    "- Performance Mode (od April 2025) - wybór między wydajnością a kosztami\n",
     "\n",
     "### Jobs vs Lakeflow SDP:\n",
     "\n",
@@ -180,25 +180,25 @@
     "\n",
     "#### 2. Fan-out (parallel processing):\n",
     "```\n",
-    "        Task A\n",
-    "       /  |  \\\n",
-    "      B   C   D\n",
+    " Task A\n",
+    " / | \\\n",
+    " B C D\n",
     "```\n",
     "\n",
     "#### 3. Fan-in (merge results):\n",
     "```\n",
-    "    A   B   C\n",
-    "     \\  |  /\n",
-    "      Task D\n",
+    " A B C\n",
+    " \\ | /\n",
+    " Task D\n",
     "```\n",
     "\n",
     "#### 4. Diamond (complex):\n",
     "```\n",
-    "      Task A\n",
-    "      /    \\\n",
-    "     B      C\n",
-    "      \\    /\n",
-    "      Task D\n",
+    " Task A\n",
+    " / \\\n",
+    " B C\n",
+    " \\ /\n",
+    " Task D\n",
     "```\n",
     "\n",
     "---"
@@ -1027,10 +1027,10 @@
     "### Scenario: Daily Orders ETL Pipeline\n",
     "```\n",
     "1. validate_source → 2. ingest_bronze → 3. transform_silver\n",
-    "                                          ↓\n",
-    "                            4a. aggregate_gold ← 5. data_quality_check\n",
-    "                                          ↓\n",
-    "                            4b. customer_metrics\n",
+    " ↓\n",
+    " 4a. aggregate_gold ← 5. data_quality_check\n",
+    " ↓\n",
+    " 4b. customer_metrics\n",
     "```"
    ]
   },
@@ -1179,13 +1179,13 @@
     "\n",
     "### Nauczyłeś się:\n",
     "\n",
-    "- **Multi-task Jobs**: DAG-based workflow orchestration  \n",
-    "- **Task Types**: Notebook, SQL, DLT, dbt tasks  \n",
-    "- **Dependencies**: Sequential, parallel, fan-out/fan-in patterns  \n",
-    "- **Parametryzacja**: Job parameters, task values, dynamic values  \n",
-    "- **Monitoring**: Email, webhooks, custom metrics  \n",
-    "- **Retry Logic**: Automatic retry dla transient errors  \n",
-    "- **Best Practices**: Idempotency, error handling, cost optimization  \n",
+    "- **Multi-task Jobs**: DAG-based workflow orchestration \n",
+    "- **Task Types**: Notebook, SQL, DLT, dbt tasks \n",
+    "- **Dependencies**: Sequential, parallel, fan-out/fan-in patterns \n",
+    "- **Parametryzacja**: Job parameters, task values, dynamic values \n",
+    "- **Monitoring**: Email, webhooks, custom metrics \n",
+    "- **Retry Logic**: Automatic retry dla transient errors \n",
+    "- **Best Practices**: Idempotency, error handling, cost optimization \n",
     "\n",
     "### Key Takeaways:\n",
     "\n",
