--- a/DZIEN_3_Transformation_Governance_Integrations/05_bi_analytics_integrations.ipynb
+++ b/DZIEN_3_Transformation_Governance_Integrations/05_bi_analytics_integrations.ipynb
@@ -2,6 +2,17 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# BI & Analytics Integrations\n",
+    "\n",
+    "**Cel szkoleniowy:** Integracja Databricks Lakehouse z narzedzniami BI i udostepnianie danych uzytkownikom biznesowym\n",
+    "\n",
+    "**Zakres tematyczny:**\n- SQL Warehouses: Serverless, Pro, Classic\n- Databricks Genie (AI/BI) - natural language queries\n- Integracje zewnetrzne: Power BI, Dremio\n- Przygotowanie danych dla warstwy BI\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9e5e2ae2",
    "metadata": {},
    "source": [
@@ -18,8 +29,8 @@
     "- **Dzień szkolenia**: Dzień 3 - Integracje i Governance\n",
     "- **Typ notebooka**: Demo\n",
     "- **Wymagania techniczne**:\n",
-    "  - Uprawnienia do tworzenia SQL Warehouses (lub dostęp do istniejącego)\n",
-    "  - Unity Catalog"
+    " - Uprawnienia do tworzenia SQL Warehouses (lub dostęp do istniejącego)\n",
+    " - Unity Catalog"
    ]
   },
   {
@@ -76,7 +87,10 @@
     "spark.sql(f\"USE CATALOG {CATALOG}\")\n",
     "spark.sql(f\"USE SCHEMA {GOLD_SCHEMA}\")\n",
     "\n",
-    "print(f\"Working in: {CATALOG}.{GOLD_SCHEMA}\")"
+    "display(spark.createDataFrame([\n",
+    "    (\"Katalog\", CATALOG),\n",
+    "    (\"Schemat\", GOLD_SCHEMA)\n",
+    "], [\"Parametr\", \"Wartość\"]))"
    ]
   },
   {
@@ -96,9 +110,9 @@
    "source": [
     "### Typy Warehouse'ów\n",
     "\n",
-    "1.  **Serverless**: Startuje w sekundy, skaluje się automatycznie. Rekomendowany.\n",
-    "2.  **Pro**: Wykorzystuje silnik Photon, ale wymaga dłuższego startu (chyba że jest pula).\n",
-    "3.  **Classic**: Starsza architektura (VM-based)."
+    "1. **Serverless**: Startuje w sekundy, skaluje się automatycznie. Rekomendowany.\n",
+    "2. **Pro**: Wykorzystuje silnik Photon, ale wymaga dłuższego startu (chyba że jest pula).\n",
+    "3. **Classic**: Starsza architektura (VM-based)."
    ]
   },
   {
@@ -125,8 +139,20 @@
     "    }\n",
     "}\n",
     "\n",
-    "import json\n",
-    "print(json.dumps(warehouse_config, indent=2))"
+    "# Wyświetlenie konfiguracji jako DataFrame\n",
+    "config_df = spark.createDataFrame([\n",
+    "    (\"name\", warehouse_config[\"name\"]),\n",
+    "    (\"cluster_size\", warehouse_config[\"cluster_size\"]),\n",
+    "    (\"min_num_clusters\", str(warehouse_config[\"min_num_clusters\"])),\n",
+    "    (\"max_num_clusters\", str(warehouse_config[\"max_num_clusters\"])),\n",
+    "    (\"auto_stop_mins\", str(warehouse_config[\"auto_stop_mins\"])),\n",
+    "    (\"enable_serverless_compute\", str(warehouse_config[\"enable_serverless_compute\"])),\n",
+    "    (\"warehouse_type\", warehouse_config[\"warehouse_type\"]),\n",
+    "    (\"tags.department\", warehouse_config[\"tags\"][\"department\"]),\n",
+    "    (\"tags.cost_center\", warehouse_config[\"tags\"][\"cost_center\"])\n",
+    "], [\"Parametr\", \"Wartość\"])\n",
+    "\n",
+    "display(config_df)"
    ]
   },
   {
@@ -167,7 +193,10 @@
     "'Całkowita wartość zamówienia w PLN (brutto).'\n",
     "\"\"\")\n",
     "\n",
-    "print(\"Metadane zaktualizowane. Genie będzie teraz lepiej rozumieć te dane.\")"
+    "display(spark.createDataFrame([\n",
+    "    (\"Metadane\", \"Zaktualizowane\"),\n",
+    "    (\"Cel\", \"Genie będzie teraz lepiej rozumieć te dane\")\n",
+    "], [\"Status\", \"Wartość\"]))"
    ]
   },
   {
@@ -222,7 +251,11 @@
     "GROUP BY 1, 2, 3\n",
     "\"\"\")\n",
     "\n",
-    "print(f\"Widok {view_name} gotowy do podłączenia w BI.\")"
+    "display(spark.createDataFrame([\n",
+    "    (\"Widok\", view_name),\n",
+    "    (\"Lokalizacja\", f\"{CATALOG}.{GOLD_SCHEMA}.{view_name}\"),\n",
+    "    (\"Status\", \"Gotowy do podłączenia w BI\")\n",
+    "], [\"Parametr\", \"Wartość\"]))"
    ]
   },
   {
@@ -260,9 +293,9 @@
    "source": [
     "## Podsumowanie\n",
     "\n",
-    "1.  Skonfigurowaliśmy metadane dla **Genie**.\n",
-    "2.  Omówiliśmy typy **SQL Warehouses**.\n",
-    "3.  Przygotowaliśmy zoptymalizowany widok dla **Power BI / Dremio**."
+    "1. Skonfigurowaliśmy metadane dla **Genie**.\n",
+    "2. Omówiliśmy typy **SQL Warehouses**.\n",
+    "3. Przygotowaliśmy zoptymalizowany widok dla **Power BI / Dremio**."
    ]
   },
   {
@@ -281,7 +314,7 @@
    "outputs": [],
    "source": [
     "# spark.sql(f\"DROP VIEW IF EXISTS {CATALOG}.{GOLD_SCHEMA}.{view_name}\")\n",
-    "print(\"Zasoby zachowane do dalszych ćwiczeń.\")"
+    "display(spark.createDataFrame([(\"Status\", \"Zasoby zachowane do dalszych ćwiczeń\")], [\"Info\", \"Wartość\"]))"
    ]
   }
  ],
