--- a/DZIEN_3_Transformation_Governance_Integrations/06_ai_ml_genai_integrations.ipynb
+++ b/DZIEN_3_Transformation_Governance_Integrations/06_ai_ml_genai_integrations.ipynb
@@ -2,6 +2,17 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# AI/ML i GenAI Integrations\n",
+    "\n",
+    "**Cel szkoleniowy:** Zrozumienie mozliwosci AI/ML w Databricks: MLflow, Feature Store, Vector Search i GenAI\n",
+    "\n",
+    "**Zakres tematyczny:**\n- MLflow: Tracking, Registry, Model Serving\n- Feature Store: centralne repozytorium cech\n- Vector Search: baza wektorowa dla RAG\n- GenAI: integracja z LLM (DBRX, Llama)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d7ea0a9e",
    "metadata": {},
    "source": [
@@ -18,10 +29,10 @@
     "- **Dzień szkolenia**: Dzień 3 - Integracje i Governance\n",
     "- **Typ notebooka**: Demo\n",
     "- **Wymagania techniczne**:\n",
-    "  - Klaster ML (Databricks Runtime ML 13.0+)\n",
-    "  - Dostęp do Unity Catalog (dla Feature Store i Vector Search)\n",
-    "  - (Opcjonalnie) Skonfigurowany Vector Search Endpoint\n",
-    "  - (Opcjonalnie) Dostęp do Model Serving (Foundation Models)"
+    " - Klaster ML (Databricks Runtime ML 13.0+)\n",
+    " - Dostęp do Unity Catalog (dla Feature Store i Vector Search)\n",
+    " - (Opcjonalnie) Skonfigurowany Vector Search Endpoint\n",
+    " - (Opcjonalnie) Dostęp do Model Serving (Foundation Models)"
    ]
   },
   {
@@ -85,7 +96,10 @@
     "spark.sql(f\"USE CATALOG {CATALOG}\")\n",
     "spark.sql(f\"USE SCHEMA {GOLD_SCHEMA}\")\n",
     "\n",
-    "print(f\"Working in: {CATALOG}.{GOLD_SCHEMA}\")"
+    "display(spark.createDataFrame([\n",
+    "    (\"Katalog\", CATALOG),\n",
+    "    (\"Schemat\", GOLD_SCHEMA)\n",
+    "], [\"Parametr\", \"Wartość\"]))"
    ]
   },
   {
@@ -110,7 +124,8 @@
     "experiment_path = f\"/Users/{username}/KION_ML_Experiment\"\n",
     "\n",
     "mlflow.set_experiment(experiment_path)\n",
-    "print(f\"Eksperyment: {experiment_path}\")"
+    "\n",
+    "display(spark.createDataFrame([(\"Eksperyment MLflow\", experiment_path)], [\"Parametr\", \"Wartość\"]))"
    ]
   },
   {
@@ -135,7 +150,10 @@
     "y = df_sales[\"label\"]\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
-    "print(f\"Train shape: {X_train.shape}\")"
+    "display(spark.createDataFrame([\n",
+    "    (\"Train shape\", f\"{X_train.shape[0]} rows, {X_train.shape[1]} features\"),\n",
+    "    (\"Test shape\", f\"{X_test.shape[0]} rows, {X_test.shape[1]} features\")\n",
+    "], [\"Dataset\", \"Rozmiar\"]))"
    ]
   },
   {
@@ -162,7 +180,14 @@
     "    # Logowanie modelu\n",
     "    mlflow.sklearn.log_model(model, \"model\")\n",
     "    \n",
-    "    print(f\"Run ID: {run.info.run_id}, MSE: {mse:.2f}\")"
+    "    run_id = run.info.run_id\n",
+    "\n",
+    "display(spark.createDataFrame([\n",
+    "    (\"Run ID\", run_id),\n",
+    "    (\"MSE\", f\"{mse:.2f}\"),\n",
+    "    (\"Model\", \"RandomForestRegressor\"),\n",
+    "    (\"n_estimators\", str(n_estimators))\n",
+    "], [\"Parametr\", \"Wartość\"]))"
    ]
   },
   {
@@ -206,11 +231,16 @@
     "        df=features_df,\n",
     "        description=\"Podstawowe cechy klienta: liczba zamówień, wydatki.\"\n",
     "    )\n",
-    "    print(f\"Tabela cech utworzona: {feature_table_name}\")\n",
+    "    status_msg = \"Utworzona\"\n",
     "except Exception as e:\n",
-    "    print(f\"Tabela prawdopodobnie istnieje lub błąd uprawnień: {e}\")\n",
-    "    # Jeśli istnieje, możemy ją zaktualizować:\n",
-    "    # fs.write_table(name=feature_table_name, df=features_df, mode=\"merge\")"
+    "    status_msg = f\"Istnieje lub błąd: {str(e)[:50]}...\"\n",
+    "\n",
+    "display(spark.createDataFrame([\n",
+    "    (\"Feature Table\", feature_table_name),\n",
+    "    (\"Status\", status_msg),\n",
+    "    (\"Primary Key\", \"customer_id\"),\n",
+    "    (\"Cechy\", \"order_count, total_spend, avg_order_value\")\n",
+    "], [\"Parametr\", \"Wartość\"]))"
    ]
   },
   {
@@ -223,8 +253,8 @@
     "Vector Search to klucz do budowania systemów RAG. Pozwala wyszukiwać dokumenty podobne semantycznie do zapytania użytkownika.\n",
     "\n",
     "**Wymagania:**\n",
-    "1.  **Vector Search Endpoint** (musi być utworzony w Compute -> Vector Search).\n",
-    "2.  **Tabela źródłowa** z włączonym Change Data Feed."
+    "1. **Vector Search Endpoint** (musi być utworzony w Compute -> Vector Search).\n",
+    "2. **Tabela źródłowa** z włączonym Change Data Feed."
    ]
   },
   {
@@ -246,7 +276,12 @@
     "\n",
     "source_table = f\"{CATALOG}.{GOLD_SCHEMA}.product_docs_rag\"\n",
     "docs_df.write.format(\"delta\").mode(\"overwrite\").option(\"delta.enableChangeDataFeed\", \"true\").saveAsTable(source_table)\n",
-    "print(f\"Tabela źródłowa utworzona: {source_table}\")"
+    "\n",
+    "display(spark.createDataFrame([\n",
+    "    (\"Tabela źródłowa\", source_table),\n",
+    "    (\"Liczba dokumentów\", \"4\"),\n",
+    "    (\"Change Data Feed\", \"Włączony\")\n",
+    "], [\"Parametr\", \"Wartość\"]))"
    ]
   },
   {
@@ -266,6 +301,8 @@
     "VECTOR_SEARCH_ENDPOINT_NAME = \"kion_vector_endpoint_demo\" \n",
     "index_name = f\"{CATALOG}.{GOLD_SCHEMA}.product_docs_index\"\n",
     "\n",
+    "status_info = []\n",
+    "\n",
     "try:\n",
     "    vsc = VectorSearchClient()\n",
     "    \n",
@@ -274,7 +311,7 @@
     "    endpoint_exists = any(e['name'] == VECTOR_SEARCH_ENDPOINT_NAME for e in endpoints.get('endpoints', []))\n",
     "    \n",
     "    if endpoint_exists:\n",
-    "        print(f\"Endpoint {VECTOR_SEARCH_ENDPOINT_NAME} znaleziony. Tworzenie indeksu...\")\n",
+    "        status_info.append((\"Endpoint\", f\"{VECTOR_SEARCH_ENDPOINT_NAME} - znaleziony\"))\n",
     "        \n",
     "        # Tworzenie indeksu (Delta Sync Index)\n",
     "        # To automatycznie zarządza embeddingami (używając modelu Databricks BGE lub OpenAI)\n",
@@ -287,13 +324,16 @@
     "            embedding_source_column=\"text\",\n",
     "            embedding_model_endpoint_name=\"databricks-bge-large-en\" # Model wbudowany\n",
     "        )\n",
-    "        print(\"Indeks jest tworzony w tle...\")\n",
+    "        status_info.append((\"Indeks\", \"Tworzony w tle...\"))\n",
     "    else:\n",
-    "        print(f\"WARN: Endpoint '{VECTOR_SEARCH_ENDPOINT_NAME}' nie istnieje. Utwórz go w UI (Compute -> Vector Search).\")\n",
-    "        print(\"Poniżej symulacja działania (dla celów demo).\")\n",
+    "        status_info.append((\"Endpoint\", f\"'{VECTOR_SEARCH_ENDPOINT_NAME}' NIE istnieje\"))\n",
+    "        status_info.append((\"Instrukcja\", \"Utwórz w UI: Compute -> Vector Search\"))\n",
+    "        status_info.append((\"Tryb\", \"Symulacja (dla celów demo)\"))\n",
     "\n",
     "except Exception as e:\n",
-    "    print(f\"Błąd Vector Search (czy biblioteka jest zainstalowana?): {e}\")"
+    "    status_info.append((\"Błąd Vector Search\", str(e)[:80]))\n",
+    "\n",
+    "display(spark.createDataFrame(status_info, [\"Parametr\", \"Wartość\"]))"
    ]
   },
   {
@@ -310,15 +350,15 @@
     "#     columns=[\"id\", \"text\"],\n",
     "#     num_results=1\n",
     "# )\n",
-    "# print(results)\n",
     "\n",
     "# --- SYMULACJA LOKALNA (Dla celów edukacyjnych, gdy brak infrastruktury) ---\n",
-    "print(\"\\n--- SYMULACJA WYNIKÓW ---\")\n",
-    "print(\"Query: 'Szukam wózka do ciężkich prac na dworze'\")\n",
-    "print(\"Najbardziej podobny dokument:\")\n",
-    "print(\"ID: 2\")\n",
-    "print(\"Text: Wózek spalinowy Diesel, udźwig 5 ton, do pracy na zewnątrz, trudny teren.\")\n",
-    "print(\"Score: 0.89\")"
+    "display(spark.createDataFrame([\n",
+    "    (\"Query\", \"Szukam wózka do ciężkich prac na dworze\"),\n",
+    "    (\"\", \"\"),\n",
+    "    (\"Wynik - ID\", \"2\"),\n",
+    "    (\"Wynik - Text\", \"Wózek spalinowy Diesel, udźwig 5 ton, do pracy na zewnątrz, trudny teren.\"),\n",
+    "    (\"Wynik - Score\", \"0.89\")\n",
+    "], [\"Parametr\", \"Wartość\"]))"
    ]
   },
   {
@@ -367,8 +407,12 @@
     "\n",
     "# Test\n",
     "prompt = \"Jakie są zalety wózków elektrycznych?\"\n",
-    "print(f\"Pytanie: {prompt}\")\n",
-    "print(f\"Odpowiedź LLM: \\n{query_llm(prompt)}\")"
+    "odpowiedz = query_llm(prompt)\n",
+    "\n",
+    "display(spark.createDataFrame([\n",
+    "    (\"Pytanie\", prompt),\n",
+    "    (\"Odpowiedź LLM\", odpowiedz)\n",
+    "], [\"Parametr\", \"Wartość\"]))"
    ]
   },
   {
@@ -378,10 +422,10 @@
    "source": [
     "## Podsumowanie\n",
     "\n",
-    "1.  Zbudowaliśmy pipeline treningowy w **MLflow**.\n",
-    "2.  Utworzyliśmy tabelę cech w **Feature Store**.\n",
-    "3.  Pokazaliśmy jak skonfigurować **Vector Search** dla RAG.\n",
-    "4.  Skorzystaliśmy z **GenAI** do generowania odpowiedzi."
+    "1. Zbudowaliśmy pipeline treningowy w **MLflow**.\n",
+    "2. Utworzyliśmy tabelę cech w **Feature Store**.\n",
+    "3. Pokazaliśmy jak skonfigurować **Vector Search** dla RAG.\n",
+    "4. Skorzystaliśmy z **GenAI** do generowania odpowiedzi."
    ]
   },
   {
@@ -401,7 +445,7 @@
    "source": [
     "# spark.sql(f\"DROP TABLE IF EXISTS {feature_table_name}\")\n",
     "# spark.sql(f\"DROP TABLE IF EXISTS {source_table}\")\n",
-    "print(\"Zasoby zachowane.\")"
+    "display(spark.createDataFrame([(\"Status\", \"Zasoby zachowane do dalszych ćwiczeń\")], [\"Info\", \"Wartość\"]))"
    ]
   }
  ],
