--- a/DZIEN_3_Transformation_Governance_Integrations/workshops/02_governance_security_workshop.ipynb
+++ b/DZIEN_3_Transformation_Governance_Integrations/workshops/02_governance_security_workshop.ipynb
@@ -7,12 +7,12 @@
    "source": [
     "# Warsztat 3: Unity Catalog Governance & Integracje BI/ML\n",
     "\n",
-    "**Czas trwania:** 90 minut  \n",
+    "**Czas trwania:** 90 minut \n",
     "**Cel:** Praktyczne wykorzystanie Unity Catalog do zarządzania bezpieczeństwem i uprawnieniami, eksploracja data lineage, integracja z narzędziami BI (Power BI Direct Lake) oraz ML (MLflow, Feature Store).\n",
     "\n",
     "---\n",
     "\n",
-    "## 📋 Cele warsztatowe\n",
+    "## Cele warsztatowe\n",
     "\n",
     "- Tworzenie katalogów i schematów w Unity Catalog\n",
     "- Zarządzanie uprawnieniami: GRANT / REVOKE\n",
@@ -83,7 +83,7 @@
    "source": [
     "# TODO: Utwórz katalog kion_catalog\n",
     "spark.sql(\"\"\"\n",
-    "    CREATE CATALOG IF NOT EXISTS ___\n",
+    " CREATE CATALOG IF NOT EXISTS ___\n",
     "\"\"\")\n",
     "\n",
     "# TODO: Użyj utworzonego katalogu\n",
@@ -91,8 +91,8 @@
     "\n",
     "# TODO: Utwórz schematy bronze, silver, gold\n",
     "for schema_name in [___, ___, ___]:\n",
-    "    spark.sql(f\"CREATE SCHEMA IF NOT EXISTS {schema_name}\")\n",
-    "    print(f\"Schemat {schema_name} utworzony\")"
+    " spark.sql(f\"CREATE SCHEMA IF NOT EXISTS {schema_name}\")\n",
+    " print(f\"Schemat {schema_name} utworzony\")"
    ]
   },
   {
@@ -150,21 +150,21 @@
     "# TODO: Uzupełnij brakujące części\n",
     "\n",
     "try:\n",
-    "    spark.sql(\"\"\"\n",
-    "        GRANT ___ ON SCHEMA kion_catalog.gold TO `data_analysts`\n",
-    "    \"\"\")\n",
-    "    print(\"Uprawnienia SELECT przyznane dla data_analysts na gold\")\n",
+    " spark.sql(\"\"\"\n",
+    " GRANT ___ ON SCHEMA kion_catalog.gold TO `data_analysts`\n",
+    " \"\"\")\n",
+    " print(\"Uprawnienia SELECT przyznane dla data_analysts na gold\")\n",
     "except Exception as e:\n",
-    "    print(f\"Uwaga: {e}\")\n",
+    " print(f\"Uwaga: {e}\")\n",
     "\n",
     "# TODO: Przyznaj uprawnienia MODIFY dla data_engineers na silver schema\n",
     "try:\n",
-    "    spark.sql(\"\"\"\n",
-    "        GRANT ___ ON SCHEMA kion_catalog.silver TO `___`\n",
-    "    \"\"\")\n",
-    "    print(\"Uprawnienia MODIFY przyznane dla data_engineers na silver\")\n",
+    " spark.sql(\"\"\"\n",
+    " GRANT ___ ON SCHEMA kion_catalog.silver TO `___`\n",
+    " \"\"\")\n",
+    " print(\"Uprawnienia MODIFY przyznane dla data_engineers na silver\")\n",
     "except Exception as e:\n",
-    "    print(f\"Uwaga: {e}\")"
+    " print(f\"Uwaga: {e}\")"
    ]
   },
   {
@@ -225,12 +225,12 @@
     "volume_path = \"/Volumes/main/default/kion_data\"\n",
     "\n",
     "bronze_customers = (\n",
-    "    spark.read\n",
-    "    .format(\"csv\")\n",
-    "    .option(\"header\", \"true\")\n",
-    "    .option(\"inferSchema\", \"true\")\n",
-    "    .load(f\"{volume_path}/customers/customers.csv\")\n",
-    "    .withColumn(\"ingest_timestamp\", current_timestamp())\n",
+    " spark.read\n",
+    " .format(\"csv\")\n",
+    " .option(\"header\", \"true\")\n",
+    " .option(\"inferSchema\", \"true\")\n",
+    " .load(f\"{volume_path}/customers/customers.csv\")\n",
+    " .withColumn(\"ingest_timestamp\", current_timestamp())\n",
     ")\n",
     "\n",
     "# TODO: Zapisz do Bronze w Unity Catalog\n",
@@ -247,10 +247,10 @@
    "source": [
     "# Silver Layer: Czyszczenie i transformacje\n",
     "silver_customers = (\n",
-    "    spark.table(\"kion_catalog.bronze.customers_bronze\")\n",
-    "    .filter(col(\"customer_id\").isNotNull())\n",
-    "    .dropDuplicates([\"customer_id\"])\n",
-    "    .withColumn(\"processed_timestamp\", current_timestamp())\n",
+    " spark.table(\"kion_catalog.bronze.customers_bronze\")\n",
+    " .filter(col(\"customer_id\").isNotNull())\n",
+    " .dropDuplicates([\"customer_id\"])\n",
+    " .withColumn(\"processed_timestamp\", current_timestamp())\n",
     ")\n",
     "\n",
     "# TODO: Zapisz do Silver\n",
@@ -276,15 +276,15 @@
     "\n",
     "# Wzbogać zamówienia o produkty\n",
     "enriched_orders = (\n",
-    "    orders_df\n",
-    "    .join(products_df, \"product_id\", \"left\")\n",
-    "    .select(\n",
-    "        \"order_id\",\n",
-    "        \"customer_id\",\n",
-    "        F.col(\"order_date\").cast(\"timestamp\").alias(\"order_date\"),\n",
-    "        \"status\",\n",
-    "        F.col(\"total_amount\").alias(\"amount\")\n",
-    "    )\n",
+    " orders_df\n",
+    " .join(products_df, \"product_id\", \"left\")\n",
+    " .select(\n",
+    " \"order_id\",\n",
+    " \"customer_id\",\n",
+    " F.col(\"order_date\").cast(\"timestamp\").alias(\"order_date\"),\n",
+    " \"status\",\n",
+    " F.col(\"total_amount\").alias(\"amount\")\n",
+    " )\n",
     ")\n",
     "\n",
     "# TODO: Zapisz orders do Bronze\n",
@@ -301,9 +301,9 @@
    "source": [
     "# Silver Layer: Przetwórz orders\n",
     "silver_orders = (\n",
-    "    spark.table(\"kion_catalog.bronze.orders_bronze\")\n",
-    "    .filter(col(\"status\") == \"completed\")\n",
-    "    .withColumn(\"processed_timestamp\", current_timestamp())\n",
+    " spark.table(\"kion_catalog.bronze.orders_bronze\")\n",
+    " .filter(col(\"status\") == \"completed\")\n",
+    " .withColumn(\"processed_timestamp\", current_timestamp())\n",
     ")\n",
     "\n",
     "# TODO: Zapisz do Silver\n",
@@ -322,23 +322,23 @@
     "# TODO: Uzupełnij agregaty (suma zamówień, liczba zamówień, średnia wartość)\n",
     "\n",
     "gold_customer_summary = (\n",
-    "    spark.table(\"kion_catalog.silver.orders_silver\")\n",
-    "    .groupBy(\"customer_id\")\n",
-    "    .agg(\n",
-    "        ___((\"amount\")).alias(\"total_spent\"),\n",
-    "        ___(\"order_id\").alias(\"order_count\"),\n",
-    "        ___((___((\"amount\")), 2)).alias(\"avg_order_value\")\n",
-    "    )\n",
+    " spark.table(\"kion_catalog.silver.orders_silver\")\n",
+    " .groupBy(\"customer_id\")\n",
+    " .agg(\n",
+    " ___((\"amount\")).alias(\"total_spent\"),\n",
+    " ___(\"order_id\").alias(\"order_count\"),\n",
+    " ___((___((\"amount\")), 2)).alias(\"avg_order_value\")\n",
+    " )\n",
     ")\n",
     "\n",
     "# Połącz z danymi klientów\n",
     "gold_customer_enriched = (\n",
-    "    gold_customer_summary\n",
-    "    .join(\n",
-    "        spark.table(\"kion_catalog.silver.customers_silver\").select(\"customer_id\", \"customer_name\", \"country\"),\n",
-    "        \"customer_id\",\n",
-    "        \"left\"\n",
-    "    )\n",
+    " gold_customer_summary\n",
+    " .join(\n",
+    " spark.table(\"kion_catalog.silver.customers_silver\").select(\"customer_id\", \"customer_name\", \"country\"),\n",
+    " \"customer_id\",\n",
+    " \"left\"\n",
+    " )\n",
     ")\n",
     "\n",
     "# TODO: Zapisz do Gold\n",
@@ -399,8 +399,8 @@
    "source": [
     "# TODO: Optymalizuj tabelę Gold dla Power BI\n",
     "spark.sql(\"\"\"\n",
-    "    OPTIMIZE kion_catalog.gold.customer_summary\n",
-    "    ZORDER BY (___)\n",
+    " OPTIMIZE kion_catalog.gold.customer_summary\n",
+    " ZORDER BY (___)\n",
     "\"\"\")\n",
     "\n",
     "print(\"Tabela customer_summary zoptymalizowana dla Power BI\")"
@@ -415,13 +415,13 @@
    "source": [
     "# TODO: Dodaj komentarze do kolumn (dla dokumentacji)\n",
     "spark.sql(\"\"\"\n",
-    "    ALTER TABLE kion_catalog.gold.customer_summary \n",
-    "    ALTER COLUMN customer_id COMMENT 'Unikalny identyfikator klienta'\n",
+    " ALTER TABLE kion_catalog.gold.customer_summary \n",
+    " ALTER COLUMN customer_id COMMENT 'Unikalny identyfikator klienta'\n",
     "\"\"\")\n",
     "\n",
     "spark.sql(\"\"\"\n",
-    "    ALTER TABLE kion_catalog.gold.customer_summary \n",
-    "    ALTER COLUMN total_spent COMMENT '___'\n",
+    " ALTER TABLE kion_catalog.gold.customer_summary \n",
+    " ALTER COLUMN total_spent COMMENT '___'\n",
     "\"\"\")\n",
     "\n",
     "print(\"Komentarze do kolumn dodane\")"
@@ -440,10 +440,10 @@
     "1. Otwórz Power BI Desktop\n",
     "2. Wybierz **Get Data → Azure Databricks**\n",
     "3. Wprowadź:\n",
-    "   - **Server hostname**: [workspace-url]\n",
-    "   - **HTTP Path**: [cluster-http-path]\n",
-    "   - **Catalog**: kion_catalog\n",
-    "   - **Schema**: gold\n",
+    " - **Server hostname**: [workspace-url]\n",
+    " - **HTTP Path**: [cluster-http-path]\n",
+    " - **Catalog**: kion_catalog\n",
+    " - **Schema**: gold\n",
     "4. Wybierz tryb **DirectQuery** lub **Direct Lake** (jeśli dostępne)\n",
     "5. Załaduj tabelę `customer_summary`\n",
     "\n",
@@ -512,31 +512,31 @@
     "mlflow.set_experiment(\"/Users/kion_training/customer_value_prediction\")\n",
     "\n",
     "with mlflow.start_run(run_name=\"linear_regression_baseline\") as run:\n",
-    "    # TODO: Zaloguj parametry\n",
-    "    mlflow.log_param(\"model_type\", \"___\")\n",
-    "    mlflow.log_param(\"test_size\", ___)\n",
-    "    \n",
-    "    # Trenuj model\n",
-    "    model = LinearRegression()\n",
-    "    model.fit(X_train, y_train)\n",
-    "    \n",
-    "    # Predykcja\n",
-    "    y_pred = model.predict(X_test)\n",
-    "    \n",
-    "    # Oblicz metryki\n",
-    "    mse = mean_squared_error(y_test, y_pred)\n",
-    "    r2 = r2_score(y_test, y_pred)\n",
-    "    \n",
-    "    # TODO: Zaloguj metryki\n",
-    "    mlflow.log_metric(\"mse\", ___)\n",
-    "    mlflow.log_metric(\"r2\", ___)\n",
-    "    \n",
-    "    # TODO: Zaloguj model\n",
-    "    mlflow.sklearn.log_model(model, \"model\")\n",
-    "    \n",
-    "    print(f\"Run ID: {run.info.run_id}\")\n",
-    "    print(f\"MSE: {mse:.2f}\")\n",
-    "    print(f\"R2 Score: {r2:.4f}\")"
+    " # TODO: Zaloguj parametry\n",
+    " mlflow.log_param(\"model_type\", \"___\")\n",
+    " mlflow.log_param(\"test_size\", ___)\n",
+    " \n",
+    " # Trenuj model\n",
+    " model = LinearRegression()\n",
+    " model.fit(X_train, y_train)\n",
+    " \n",
+    " # Predykcja\n",
+    " y_pred = model.predict(X_test)\n",
+    " \n",
+    " # Oblicz metryki\n",
+    " mse = mean_squared_error(y_test, y_pred)\n",
+    " r2 = r2_score(y_test, y_pred)\n",
+    " \n",
+    " # TODO: Zaloguj metryki\n",
+    " mlflow.log_metric(\"mse\", ___)\n",
+    " mlflow.log_metric(\"r2\", ___)\n",
+    " \n",
+    " # TODO: Zaloguj model\n",
+    " mlflow.sklearn.log_model(model, \"model\")\n",
+    " \n",
+    " print(f\"Run ID: {run.info.run_id}\")\n",
+    " print(f\"MSE: {mse:.2f}\")\n",
+    " print(f\"R2 Score: {r2:.4f}\")"
    ]
   },
   {
@@ -596,33 +596,33 @@
     "\n",
     "# TODO: Przygotuj feature table\n",
     "customer_features = (\n",
-    "    spark.table(\"kion_catalog.gold.customer_summary\")\n",
-    "    .select(\n",
-    "        \"customer_id\",\n",
-    "        \"total_spent\",\n",
-    "        \"order_count\",\n",
-    "        \"avg_order_value\"\n",
-    "    )\n",
+    " spark.table(\"kion_catalog.gold.customer_summary\")\n",
+    " .select(\n",
+    " \"customer_id\",\n",
+    " \"total_spent\",\n",
+    " \"order_count\",\n",
+    " \"avg_order_value\"\n",
+    " )\n",
     ")\n",
     "\n",
     "# TODO: Utwórz feature table w Feature Store\n",
     "try:\n",
-    "    fs.create_table(\n",
-    "        name=\"kion_catalog.gold.customer_features\",\n",
-    "        primary_keys=[\"___\"],\n",
-    "        df=customer_features,\n",
-    "        description=\"Customer features for ML models\"\n",
-    "    )\n",
-    "    print(\"Feature table utworzona: kion_catalog.gold.customer_features\")\n",
+    " fs.create_table(\n",
+    " name=\"kion_catalog.gold.customer_features\",\n",
+    " primary_keys=[\"___\"],\n",
+    " df=customer_features,\n",
+    " description=\"Customer features for ML models\"\n",
+    " )\n",
+    " print(\"Feature table utworzona: kion_catalog.gold.customer_features\")\n",
     "except Exception as e:\n",
-    "    print(f\"Feature table już istnieje lub błąd: {e}\")\n",
-    "    # Jeśli już istnieje, zaktualizuj\n",
-    "    fs.write_table(\n",
-    "        name=\"kion_catalog.gold.customer_features\",\n",
-    "        df=customer_features,\n",
-    "        mode=\"overwrite\"\n",
-    "    )\n",
-    "    print(\"Feature table zaktualizowana\")"
+    " print(f\"Feature table już istnieje lub błąd: {e}\")\n",
+    " # Jeśli już istnieje, zaktualizuj\n",
+    " fs.write_table(\n",
+    " name=\"kion_catalog.gold.customer_features\",\n",
+    " df=customer_features,\n",
+    " mode=\"overwrite\"\n",
+    " )\n",
+    " print(\"Feature table zaktualizowana\")"
    ]
   },
   {
@@ -674,7 +674,7 @@
     "\n",
     "## Część 7: Podsumowanie i Best Practices\n",
     "\n",
-    "### ✅ Zrealizowane cele\n",
+    "### Zrealizowane cele\n",
     "\n",
     "- Utworzenie katalogów i schematów w Unity Catalog\n",
     "- Zarządzanie uprawnieniami: GRANT / REVOKE\n",
@@ -686,7 +686,7 @@
     "\n",
     "---\n",
     "\n",
-    "### 🎯 Best Practices: Unity Catalog\n",
+    "### Best Practices: Unity Catalog\n",
     "\n",
     "1. **Hierarchia:** Metastore → Catalog → Schema → Table/View\n",
     "2. **Principle of Least Privilege:** Przyznawaj minimalne wymagane uprawnienia\n",
@@ -696,7 +696,7 @@
     "\n",
     "---\n",
     "\n",
-    "### 🎯 Best Practices: BI Integrations\n",
+    "### Best Practices: BI Integrations\n",
     "\n",
     "1. **Direct Lake:** Najszybszy tryb dla Power BI (jeśli dostępny)\n",
     "2. **Optymalizacja:** OPTIMIZE + ZORDER przed udostępnieniem do BI\n",
@@ -706,7 +706,7 @@
     "\n",
     "---\n",
     "\n",
-    "### 🎯 Best Practices: ML Integrations\n",
+    "### Best Practices: ML Integrations\n",
     "\n",
     "1. **MLflow tracking:** Zawsze loguj metryki, parametry, artifacts\n",
     "2. **Model Registry:** Rejestruj modele produkcyjne w MLflow Model Registry\n",
@@ -727,19 +727,19 @@
     "### Rozszerzone Governance\n",
     "\n",
     "1. **Row-Level Security:** Zaimplementuj row-level security w Unity Catalog\n",
-    "   - Utwórz widok z filtrem na podstawie `current_user()`\n",
-    "   - Przetestuj dostęp dla różnych użytkowników\n",
+    " - Utwórz widok z filtrem na podstawie `current_user()`\n",
+    " - Przetestuj dostęp dla różnych użytkowników\n",
     "\n",
     "2. **Column Masking:** Ukryj wrażliwe dane (np. email, phone)\n",
-    "   - Wykorzystaj `CASE WHEN is_member('sensitive_group')` do maskowania\n",
+    " - Wykorzystaj `CASE WHEN is_member('sensitive_group')` do maskowania\n",
     "\n",
     "3. **Delta Sharing:** Udostępnij dane zewnętrznie\n",
-    "   - Utwórz share w Unity Catalog\n",
-    "   - Udostępnij tabelę Gold dla zewnętrznego odbiorcy\n",
+    " - Utwórz share w Unity Catalog\n",
+    " - Udostępnij tabelę Gold dla zewnętrznego odbiorcy\n",
     "\n",
     "4. **Audit Logging:** Zbadaj audit logs\n",
-    "   - Sprawdź `system.access.audit` w Unity Catalog\n",
-    "   - Zidentyfikuj aktywność użytkowników na tabelach\n",
+    " - Sprawdź `system.access.audit` w Unity Catalog\n",
+    " - Zidentyfikuj aktywność użytkowników na tabelach\n",
     "\n",
     "---\n",
     "\n",
@@ -753,7 +753,7 @@
     "\n",
     "---\n",
     "\n",
-    "**Koniec warsztatu!** 🎉"
+    "**Koniec warsztatu!** "
    ]
   }
  ],
